# version-string.cmake

./: .gitignore  CMakeLists.txt  README.md  changelog
cmake/: revision.hpp.in
mylib/: CMakeLists.txt
mylib/src/: mylib-2.cpp  mylib.cpp  revision.hpp
src/: revision.hpp  unit-test-extra.cpp  unit-test.cpp
